<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particle_filter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olaghattas@hotmail.com">ola</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>visualization_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>colmap_srv</depend>
  <depend>cv_bridge</depend>
  <depend>detection_msgs</depend>

  <build_depend>sensor_msgs</build_depend>
  <buildtool_depend>ros2-tiny-cuda-nn</buildtool_depend>
  <buildtool_depend>collision</buildtool_depend>
  <buildtool_depend>colmap_srv</buildtool_depend>
  <buildtool_depend>detection_msgs</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- Properly handle Eigen3 includes -->
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <!-- Export Eigen3 dependency to downstream packages
     (required since we are using Eigen3 in public headers) -->
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>eigen_stl_containers</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
